test/invalid/baseline/constructor-escaped.txt
Syntax error at line 2:
  object _constructor
         ^ constructor is a reserved identifier and must not be used.
